workloads/default/rgv-redirect.ingress.yaml
---

apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: rgv-redirect
  namespace: default
  annotations:
    ingress.kubernetes.io/custom-response-headers: X-Service:rgv-redirect
    traefik.ingress.kubernetes.io/redirect-regex: ^https?://rgv.stevenxie.com/(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: https://rgv.stevenxie.me/$1
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  labels:
    app.kubernetes.io/name: rgv

spec:
  rules:
    - host: rgv.stevenxie.com
      http:
        paths:
          - backend:
              serviceName: rgv-frontend
              servicePort: http
